--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_ENV = production
 LOCALHOST = 127.0.0.1
 PORT = 8000
-MONGO_URI= mongodb://127.0.0.1:27017/auth
+MONGO_URI= mongodb+srv://iamagugbueikenna:29OJkLqXJKtWa852@cluster0.0cd41.mongodb.net/
+
 
 
 JWT_SECRET=your_secret_key
